Revisi typo, italic, dan kata tidak baku

--- a/src/00-frontMatter/kataPengantar.tex
+++ b/src/00-frontMatter/kataPengantar.tex
@@ -4,7 +4,7 @@
 \pagestyle{first-pages}
 
 Segala puji dan syukur kami panjatkan kepada Tuhan Yang Maha Esa atas berkat,
-rahmat, dan bimbingan-Nya sehingga penulis dapat menyelesaikan penyusunan skripsi ini dengan judul ``\textit{Re-Ranker} Berbasis Fitur untuk \ir{} Dokumen Legal''. Skripsi ini disusun sebagai salah satu syarat untuk memperoleh gelar Sarjana Strata Satu (S1) pada program studi Ilmu Komputer Fakultas Ilmu Komputer Universitas Indonesia. Penulis ingin mengucapkan terima kasih kepada pihak-pihak yang sudah memberikan dukungan dan bimbingan dalam proses penyusunan skripsi ini.
+rahmat, dan bimbingan-Nya sehingga penulis dapat menyelesaikan penyusunan skripsi ini dengan judul ``\judul{}''. Skripsi ini disusun sebagai salah satu syarat untuk memperoleh gelar Sarjana Strata Satu (S1) pada program studi Ilmu Komputer Fakultas Ilmu Komputer Universitas Indonesia. Penulis ingin mengucapkan terima kasih kepada pihak-pihak yang sudah memberikan dukungan dan bimbingan dalam proses penyusunan skripsi ini.
 
 Ucapan Terima Kasih:
 \begin{enumerate}[topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
