--- a/src/01-body/bab5.tex
+++ b/src/01-body/bab5.tex
@@ -33,7 +33,7 @@ Selain menguji lima sistem utama, skenario ini juga akan menyertakan model \base
 
 
 %-----------------------------------------------------------------------------%
-\subsection{Pengaruh Cut-off}
+\subsection{Pengaruh \Cutoff{}}
 \label{subbab:5::Pengaruh Cut-off}
 Dalam skenario ini, peneliti bertujuan untuk menyelidiki pengaruh nilai \cutoff{} terhadap efektivitas proses \retrieval{} dalam sistem \cascaded{} \ir{}. Eksperimen yang dilakukan mengikuti metodologi yang serupa dengan skenario sebelumnya, namun dengan perbedaan penting yaitu eksperimen yang dilakukan hanya menggunakan satu kali pembagian data untuk pelatihan dan percobaan. Dengan menetapkan pembagian data sebanyak satu kali, pengamatan yang dilakukan lebih spesifik terkait pengaruh nilai \cutoff{} tanpa melibatkan variasi pembagian data yang berbeda-beda.
 
@@ -99,7 +99,7 @@ Pertama, model \obm{} dan \tfidf{} dipilih karena merupakan model yang umum digu
 %-----------------------------------------------------------------------------%
 \section{Hasil Eksperimen}
 \label{subbab:5:Hasil Eksperimen}
-Setelah melaksanakan skenario eksperimen seperti yang dijelaskan pada \subbab{}~\ref{subbab:5:Skenario Eksperimen}, hasil yang diperoleh akan dipaparkan pada \subbab{}~\ref{subbab:5:Hasil Eksperimen}. Selanjutnya, hasil tersebut akan dianalisis secara mendetail pada \subbab{}~\ref{subbab:5::Hasil Analisis Bobot Fitur} untuk analisis \textit{feature importance} dan pada \subbab{}~\ref{subbab:5::Hasil Pengaruh Cut-off} untuk analisis pengaruh \cutoff{}.
+Setelah melaksanakan skenario eksperimen seperti yang dijelaskan pada \subbab{}~\ref{subbab:5:Skenario Eksperimen}, hasil yang diperoleh akan dipaparkan pada \subbab{}~\ref{subbab:5:Hasil Eksperimen}. Selanjutnya, hasil tersebut akan dianalisis secara mendetail pada \subbab{}~\ref{subbab:5::Hasil Analisis Bobot Fitur} untuk analisis \feature{} \importance{} dan pada \subbab{}~\ref{subbab:5::Hasil Pengaruh Cut-off} untuk analisis pengaruh \cutoff{}.
 %-----------------------------------------------------------------------------%
 
 
@@ -109,7 +109,7 @@ Setelah melaksanakan skenario eksperimen seperti yang dijelaskan pada \subbab{}~
 %-----------------------------------------------------------------------------%
 \subsection{Hasil Analisis Bobot Fitur}
 \label{subbab:5::Hasil Analisis Bobot Fitur}
-Pada \tabel{}~\ref{tabel:hasil kfold}, diberikan hasil dari skenario pertama yang melibatkan evaluasi lima sistem \cascaded{} \ir{} menggunakan metrik-metrik yang telah didefinisikan pada \subbab{}~\ref{subbab:4:Evaluasi Model}. Hasil tersebut menunjukkan bahwa semua sistem \ir{} yang ditambahkan \reranker{} dengan fitur yang diusulkan dapat meningkatkan efektivitas proses \retrieval{}. Selain itu, terdapat beberapa temuan menarik yang dapat diinterpretasi dari hasil eksperimen tersebut.
+Pada \tabel{}~\ref{tabel:hasil kfold}, diberikan hasil dari skenario pertama yang melibatkan evaluasi lima sistem \cascaded{} \ir{} menggunakan metrik-metrik yang telah didefinisikan pada \subbab{}~\ref{subbab:4:Evaluasi Model}. Hasil tersebut menunjukkan bahwa semua sistem \ir{} yang ditambahkan \reranker{} dengan fitur yang diusulkan dapat meningkatkan efektivitas proses \retrieval{}. Selain itu, terdapat beberapa temuan menarik yang dapat diinterpretasikan dari hasil eksperimen tersebut.
 
 Pertama, sistem DLH13 (Reranker) menunjukkan performa terbaik menurut tolok ukur utama penelitian ini, \recall{} \cutoff{} 3, dan juga didapat performa terbaik untuk metrik \precision{} pada \cutoff{} yang sama. Nilai metrik \recall{} tertinggi menunjukkan bahwa sistem DLH13 (Reranker) berhasil mengembalikan dokumen relevan paling banyak sebagai bagian dari 3 dokumen teratas, sehingga merupakan sistem yang efektif dalam mengidentifikasi dokumen yang relevan dibanding sistem lainnya dengan batasan evaluasi untuk 3 dokumen teratas. Sementara itu, metrik \precision{} menandakan bahwa sistem tersebut mengembalikan dokumen tidak relevan yang paling sedikit pada 3 dokumen teratas, dalam arti lain membuat paling sedikit kesalahan dibanding sistem lain yang diuji.
 
@@ -186,22 +186,20 @@ Perlu diperhatikan bahwa seluruh metrik yang diperoleh dengan menambahkan \reran
     }
 \end{table}
 
-Setelah diketahui bahwa penambahan \reranker{} berbasis fitur dengan seluruh fitur usulan, secara umum, dapat meningkatkan kinerja secara signifikan, dilakukan analisis terhadap fitur yang memiliki kontribusi terbesar dalam penentuan relevansi tersebut dari \textit{feature importance}-nya. Nilai \textit{feature importance} dalam konteks ini adalah frekuensi pemanfaatan fitur dalam membuat suatu \textit{split} pada model \lambdamart{}. Nilai-nilai tersebut diambil dari semua model \lambdamart{} yang dilatih menggunakan \fcv{} kemudian dihitung rata-rata dan standar deviasinya untuk analisis. Hasil perhitungan tersebut diberikan visualisasinya pada grafik \gambar{}~\ref{grafik:Feature Importance All}.
+Setelah diketahui bahwa penambahan \reranker{} berbasis fitur dengan seluruh fitur usulan, secara umum, dapat meningkatkan kinerja secara signifikan, dilakukan analisis terhadap fitur yang memiliki kontribusi terbesar dalam penentuan relevansi tersebut dari \feature{} \importance{}-nya. Nilai \feature{} \importance{} dalam konteks ini adalah frekuensi pemanfaatan fitur dalam membuat suatu \textit{split} pada model \lambdamart{}. Nilai-nilai tersebut diambil dari semua model \lambdamart{} yang dilatih menggunakan \fcv{} kemudian dihitung rata-rata dan standar deviasi untuk analisis. Hasil perhitungan tersebut divisualisasikan pada grafik \gambar{}~\ref{grafik:Feature Importance All}.
 \begin{figure}[!ht]
     \centering
     \includegraphics[scale=0.725]{assets/pdfs/Feature Importance Distribution Log.pdf}
-    \caption{\textit{Feature importance} secara umum. Perhatikan bahwa sumbu-x merupakan nilai \textit{feature importance} dalam skala logaritmik, Sementara itu, sumbu-y merupakan daftar nama fitur yang diusulkan terurut secara menurun dari yang paling penting.}
+    \caption{\feature{} \importance{} secara umum. Perhatikan bahwa sumbu-x merupakan nilai \feature{} \importance{} dalam skala logaritmik, Sementara itu, sumbu-y merupakan daftar nama fitur yang diusulkan terurut secara menurun dari yang paling penting.}
     \label{grafik:Feature Importance All}
 \end{figure}
-Perlu diketahui bahwa nilai dari \textit{feature importance} $fi$ yang diperoleh berada dalam interval tertutup $fi\in[0,1]$ dengan nilai $fi=1$ berarti bahwa model hanya menggunakan satu fitur tersebut untuk melakukan seluruh \textit{split}, sedangkan $fi=0$ berarti bahwa fitur tersebut tidak digunakan dalam membuat \textit{split} sama sekali. Namun, sebelum divisualisasikan, karena nilai $fi$ yang diperoleh sangat \textit{skew} sehingga dinormalisasi terlebih dahulu dengan menggunakan $\log(fi \times 100)$. Perhatikan bahwa, karena nilai $fi$ masuk dalam interval tertutup $[0,1]$, maka hasil normalisasi menggunakan fungsi $\log$ akan membuat grafik semakin \textit{skew}, sehingga ditetapkan konstanta pengali $100$ untuk merubah nilai menjadi interval $[0,100]$.
+Perlu diketahui bahwa nilai dari \feature{} \importance{} $fi$ yang diperoleh berada dalam interval tertutup $fi\in[0,1]$ dengan nilai $fi=1$ berarti bahwa model hanya menggunakan satu fitur tersebut untuk melakukan seluruh \textit{split}, sedangkan $fi=0$ berarti bahwa fitur tersebut tidak digunakan dalam membuat \textit{split} sama sekali. Namun, sebelum divisualisasikan, karena nilai $fi$ yang diperoleh sangat \textit{skew} sehingga dinormalisasi terlebih dahulu dengan menggunakan $\log(fi \times 100)$. Perhatikan bahwa, karena nilai $fi$ masuk dalam interval tertutup $[0,1]$, maka hasil normalisasi menggunakan fungsi $\log$ akan membuat grafik semakin \textit{skew}, sehingga ditetapkan konstanta pengali $100$ untuk merubah nilai menjadi interval $[0,100]$.
 
 Berdasarkan hasil yang didapat, ditemukan bahwa, secara rata-rata, lima fitur yang paling bermanfaat secara terurut dari yang paling penting adalah \obm{}, LEMURTF\_IDF, DLH, HIEMSTRA\_LM, dan JACCARD\_SCORE. Namun, dari kelima fitur tersebut, dua diantaranya memiliki standar deviasi tinggi, yaitu DLH dan HIEMSTRA\_LM, hal tersebut mencerminkan bahwa dari semua model \lambdamart{} yang dilatih, kedua fitur tersebut tidak konsisten menjadi fitur yang paling penting. Sementara itu, fitur-fitur seperti \obm{}, LEMURTF\_IDF, dan JACCARD\_SCORE menunjukkan hasil yang lebih konsisten dari seluruh model yang dilatih.
 
-% Dalam kasus \ir{}, klasifikasi yang dilakukan adalah menentukan suatu dokumen relevan atau tidak saat diberikan suatu kueri.
+Kemudian, seperti yang telah diusulkan pada \subbab{}~\ref{subbab:3:Usulan Fitur}, digunakan juga fitur-fitur yang memanfaatkan keluaran \encoder{}. Untuk metode pemanfaatan vektor \encoder{} \bert{}, ditemukan bahwa CONCAT\_LFHS\_CLS, sama dengan temuan \citet{devlin2018bert}, merupakan fitur yang paling efektif dalam melakukan klasifikasi menurut nilai \importance{}-nya yang relatif lebih tinggi dibanding metode pemanfaatan vektor \bert{} lainnya. Selain itu, untuk metode pengambilan lainnya, ditemukan bahwa urutan nilai \importance{} yang didapat sama dengan urutan efektivitas temuan \citet{devlin2018bert}, dengan pengecualian LHS\_CLS. Hasil eksperimen menunjukkan bahwa LHS\_CLS merupakan fitur kedua yang paling efektif diantara metode pengambilan vektor \bert{} lainnya, bertentangan dengan \citet{devlin2018bert} yang mendapatkan LHS\_CLS sebagai metode terburuk kedua. Sementara itu, untuk metode pemanfaatan \encoder{} \tfive{} didapatkan bahwa hasil eksperimen sesuai dengan temuan \citet{ni2021sentence} dengan LHS\_MEAN sebagai fitur paling efektif. Dari semua metode pengambilan vektor yang diuji, didapat bahwa penggunaan rata-rata dari vektor \hs{} \tfive{} merupakan yang paling efektif, namun nilai \importance{}-nya masih kalah dengan algoritma sederhana seperti JACCARD\_SCORE.
 
-Kemudian, seperti yang telah diusulkan pada \subbab{}~\ref{subbab:3:Usulan Fitur}, digunakan juga fitur-fitur yang memanfaatkan keluaran \encoder{}. Untuk metode pemanfaatan vektor \encoder{} \bert{}, ditemukan bahwa CONCAT\_LFHS\_CLS, sama dengan temuan \citeauthor{devlin2018bert}, merupakan fitur yang paling efektif dalam melakukan klasifikasi menurut nilai \textit{importance}-nya yang relatif lebih tinggi dibanding metode pemanfaatan vektor \bert{} lainnya. Selain itu, untuk metode pengambilan lainnya, ditemukan bahwa urutan nilai \textit{importance} yang didapat sama dengan urutan efektivitas temuan \citeauthor{devlin2018bert}, dengan pengecualian LHS\_CLS. Hasil eksperimen menunjukkan bahwa LHS\_CLS merupakan fitur kedua yang paling efektif diantara metode pengambilan vektor \bert{} lainnya, bertentangan dengan \citeauthor{devlin2018bert} yang mendapatkan LHS\_CLS sebagai metode terburuk kedua. Sementara itu, untuk metode pemanfaatan \encoder{} \tfive{} didapatkan bahwa hasil eksperimen sesuai dengan temuan \citeauthor{ni2021sentence} dengan LHS\_MEAN sebagai fitur paling efektif. Dari semua metode pengambilan vektor yang diuji, didapat bahwa penggunaan rata-rata dari vektor \hs{} \tfive{} merupakan yang paling efektif, namun nilai \textit{importance}-nya masih kalah dengan algoritma sederhana seperti JACCARD\_SCORE.
-
-Berdasarkan hasil analisis \textit{feature importance} tersebut, dilakukan pengujian efektivitas menggunakan data \testing{}. Dibentuk sistem yang sama dengan perbedaan pada jumlah fitur yang diekstraksi, yaitu dengan hanya mengekstraksi fitur nilai relevansi \obm{}, nilai relevansi LemurTF\_IDF, dan nilai kesamaan jaccard. Hasil percobaan tersebut diberikan pada \tabel{}~\ref{tabel:hasil test 3 fitur}. Menurut hasil percobaan, didapatkan bahwa, untuk metrik tolok ukur utama \recall{}$@3$, kinerja sistem relatif naik dengan penambahan proses \reranking{} menggunakan ketiga fitur tersebut. Selain metrik \recall{}$@3$, ditemukan peningkatan pada metrik \precision{}$@3$ yang mengindikasikan bahwa \reranking{} yang dilakukan dapat meningkatkan kualitas tiga dokumen teratas secara efektif.
+Berdasarkan hasil analisis \feature{} \importance{} tersebut, dilakukan pengujian efektivitas menggunakan data \testing{}. Dibentuk sistem yang sama dengan perbedaan pada jumlah fitur yang diekstraksi, yaitu dengan hanya mengekstraksi fitur nilai relevansi \obm{}, nilai relevansi LemurTF\_IDF, dan nilai kesamaan jaccard. Hasil percobaan tersebut diberikan pada \tabel{}~\ref{tabel:hasil test 3 fitur}. Menurut hasil percobaan, didapatkan bahwa, untuk metrik tolok ukur utama \recall{}$@3$, kinerja sistem relatif naik dengan penambahan proses \reranking{} menggunakan ketiga fitur tersebut. Selain metrik \recall{}$@3$, ditemukan peningkatan pada metrik \precision{}$@3$ yang mengindikasikan bahwa \reranking{} yang dilakukan dapat meningkatkan kualitas tiga dokumen teratas secara efektif.
 \begin{table}[H]
     \centering
     \caption{Hasil eksperimen pada data \testing{} menggunakan \reranker{} dengan masukan nilai relevansi \obm{} dan LemurTF\_IDF, serta JACCARD\_SCORE yang diurutkan berdasarkan metrik \recall{}@3}
@@ -226,7 +224,7 @@ Berdasarkan hasil analisis \textit{feature importance} tersebut, dilakukan pengu
     }
 \end{table}
 
-Namun, kasus yang sama tidak bisa digeneralisasikan untuk metrik lainnya, seperti yang didapatkan bahwa terjadi penurunan kinerja sistem menurut beberapa metrik. Perubahan nilai metrik diberikan dalam \tabel{}~\ref{tabel:hasil test persentase kenaikan}. Perhatikan bahwa, walaupun didapatkan peningkatan pada \recall{}$@3$, terdapat penurunan nilai metrik untuk \recall{}$@5$ atau \recall{}$@10$. Hal tersebut menunjukkan bahwa secara rata-rata penambahan \reranker{} dengan tiga fitur tersebut dapat meningkatkan kemampuan sistem untuk mengidentifikasi dokumen relevan pada tiga hasil teratas. Tetapi, diluar tiga hasil teratas, relevansi yang didapatkan kurang lebih sama atau bahkan menurun lebih cepat, yang berarti sistem tidak efektif dalam mempertahankan relevansi untuk cakupan yang lebih luas.
+Namun, kasus yang sama tidak bisa digeneralisasikan untuk metrik lainnya, seperti yang didapatkan bahwa terjadi penurunan kinerja sistem menurut beberapa metrik. Perubahan nilai metrik diberikan dalam \tabel{}~\ref{tabel:hasil test persentase kenaikan}. Perhatikan bahwa, walaupun didapatkan peningkatan pada \recall{}$@3$, terdapat penurunan nilai metrik untuk \recall{}$@5$ atau \recall{}$@10$. Hal tersebut menunjukkan bahwa secara rata-rata penambahan \reranker{} dengan tiga fitur tersebut dapat meningkatkan kemampuan sistem untuk mengidentifikasi dokumen relevan pada tiga hasil teratas. Tetapi, selain tiga hasil teratas, relevansi yang didapatkan kurang lebih sama atau bahkan menurun, yang berarti sistem tidak efektif dalam mempertahankan relevansi untuk cakupan yang lebih luas.
 
 \begin{table}[H]
     \centering
@@ -276,7 +274,7 @@ Sama seperti analisis sebelumnya, dilakukan perhitungan \textit{t-test} untuk me
 
 
 %-----------------------------------------------------------------------------%
-\subsection{Hasil Pengaruh \CutOff{}}
+\subsection{Hasil Pengaruh \Cutoff{}}
 \label{subbab:5::Hasil Pengaruh Cut-off}
 Pada \gambar{}~\ref{grafik:cutoff} diberikan hasil eksperimen untuk metrik \recall{} pada \cutoff{} 3. Namun, grafik tersebut kurang dapat menunjukkan korelasi antara \cutoff{} dengan efektivitas. Dapat dilihat bahwa sistem DLH13 (Reranker) memiliki hasil yang paling baik pada \cutoff{} 85, sedangkan efektivitas kedua terbaik didapatkan oleh sistem TF\_IDF pada \cutoff{} 150. Oleh karena itu, berdasarkan hasil eksperimen, kurang adanya bukti yang dapat mendukung hipotesis awal peneliti, yaitu terdapat korelasi positif antara nilai \cutoff{} dengan kinerja sistem.
 \begin{landscape}
@@ -300,9 +298,9 @@ Pada \gambar{}~\ref{grafik:cutoff} diberikan hasil eksperimen untuk metrik \reca
 
 Berdasarkan hasil eksperimen, didapat bahwa penambahan \lambdamart{} sebagai \reranker{} dengan menggunakan seluruh fitur usulan dapat mengingkatkan seluruh metrik sekitar $4,17\%$ dan $4,19\%$ untuk metrik utama secara signifikan. Terdapat tiga sistem yang ditemukan memiliki performa terbaik berdasarkan kasus tertentu. Pertama, DLH13 (Reranker) merupakan sistem terbaik untuk melakukan pengembalian dokumen pada 3 hasil teratas yang diindikasikan dengan metrik \recall{}$@3$ dan \precision{}$@3$ tertinggi diantara kelima sistem tersebut. Namun, untuk cakupan dokumen yang lebih luas, TF\_IDF (Reranker) dapat dijadikan alternatif karena mendapatkan metrik \recall{}$@10$ dan \precision{}$@10$ tertinggi dibandingkan sistem lainnya. Sementara itu, DFR\_BM25 (Reranker) merupakan hasil yang baik dibandingkan dengan sistem lainnya dalam kasus tertentu yang memerlukan ketepatan pengembalian pada dokumen-dokumen teratas dibandingkan jumlah relevansi yang dikembalikan.
 
-Kemudian, dari hasil analisis \textit{feature importance}, terdapat tiga fitur yang penting untuk melakukan penilaian relevansi dokumen, yaitu nilai relevansi dari \obm{} dan LEMURTF\_IDF, serta nilai kesamaan jaccard antara himpunan kata dokumen dan kueri. Dengan hanya ketiga fitur tersebut, diuji performa sistem pada data \testing{}. Hasil menunjukkan peningkatan pada \recall{}$@3$ dan \precision{}$@3$, namun tidak sepenuhnya membaik untuk metrik lainnya. Oleh karena itu, dapat disimpulkan bahwa, berdasarkan metrik utama, ketiga fitur tersebut dapat meningkatkan kinerja sekitar $3,739\%$ namun belum cukup signifikan. Selain itu, ditemukan bahwa \textit{importance} fitur \encoder{} serupa dengan performa temuan penelitian sebelumnya~\citep{devlin2018bert, ni2021sentence}, namun kurang bermanfaat untuk menentukan relevansi dokumen legal, melihat bahwa fitur tersebut memiliki \textit{importance} yang lebih kecil dibandingkan perhitungan kesamaan sederhana seperti jaccard.
+Kemudian, dari hasil analisis \feature{} \importance{}, terdapat tiga fitur yang penting untuk melakukan penilaian relevansi dokumen, yaitu nilai relevansi dari \obm{} dan LEMURTF\_IDF, serta nilai kesamaan jaccard antara himpunan kata dokumen dan kueri. Dengan hanya ketiga fitur tersebut, diuji performa sistem pada data \testing{}. Hasil menunjukkan peningkatan pada \recall{}$@3$ dan \precision{}$@3$, namun tidak sepenuhnya membaik untuk metrik lainnya. Oleh karena itu, dapat disimpulkan bahwa, berdasarkan metrik utama, ketiga fitur tersebut dapat meningkatkan kinerja sekitar $3,739\%$ namun belum cukup signifikan. Selain itu, ditemukan bahwa \importance{} fitur \encoder{} serupa dengan performa temuan penelitian sebelumnya~\citep{devlin2018bert, ni2021sentence}, namun kurang bermanfaat untuk menentukan relevansi dokumen legal, melihat bahwa fitur tersebut memiliki \importance{} yang lebih kecil dibandingkan perhitungan kesamaan sederhana seperti jaccard.
 
-Sementara itu, berdasarkan observasi, tidak ditemukan korelasi antara \cutoff{} dan efektivitas untuk rentang \cutoff{} dari 5 sampai 150 dengan interval 5. Namun, menurut nilai perhitungan korelasi \textit{pearson}, ditemukan korelasi positif sangat lemah untuk sistem DLH13 (Reranker), InL2 (Reranker), dan TF\_IDF (Reranker). Sementara itu, terdapat korelasi negatif lemah untuk sistem DFR\_BM25 (Reranker) dan korelasi negatif sangat lemah untuk sistem BM25 (Reranker). Hal tersebut bertentangan dengan hipotesis awal bahwa semakin banyak dokumen yang dikembalikan maka \lambdamart{} dapat melakukan lebih banyak pertimbangan yang dapat semakin meningkatkan kinerja sistem.
+Sementara itu, berdasarkan pengamatan, tidak ditemukan korelasi antara \cutoff{} dan efektivitas untuk rentang \cutoff{} dari 5 sampai 150 dengan interval 5. Namun, menurut nilai perhitungan korelasi \textit{pearson}, ditemukan korelasi positif sangat lemah untuk sistem DLH13 (Reranker), InL2 (Reranker), dan TF\_IDF (Reranker). Sementara itu, terdapat korelasi negatif lemah untuk sistem DFR\_BM25 (Reranker) dan korelasi negatif sangat lemah untuk sistem BM25 (Reranker). Hal tersebut bertentangan dengan hipotesis awal bahwa semakin banyak dokumen yang dikembalikan maka \lambdamart{} dapat melakukan lebih banyak pertimbangan yang dapat semakin meningkatkan kinerja sistem.
 %-----------------------------------------------------------------------------%
 
 
