--- a/src/00-frontMatter/abstrak.tex
+++ b/src/00-frontMatter/abstrak.tex
@@ -36,7 +36,7 @@
 
 \vspace*{0.5cm}
 
-\noindent Terdapat beberapa masalah yang muncul seiring dengan bertambahnya peraturan. Hal tersebut menyebabkan proses pengumpulan dan evaluasi peraturan memakan waktu yang relatif lebih lama. Oleh karena itu, diperlukan suatu sistem yang dapat mengotomatiskan kebutuhan tersebut, salah satunya adalah \ir{}. Penelitian ini bertujuan untuk meningkatkan efektivitas sistem \ir{} melalui pendekatan \reranker{} berbasis fitur dengan memanfaatkan beberapa jenis fitur, seperti atribut kuantitatif sederhana, skor \txt{} \matching{}, dan \textit{document embeddings}. Ditemukan bahwa skor kesamaan Jaccard, nilai relevansi \obm, dan nilai relevansi LemurTF\_IDF merupakan karakteristik yang dapat membantu peningkatan efektivitas \reranking{} secara konsisten dalam domain legal. Sementara itu, fitur yang memanfaatkan \textit{embeddings} dari \bert{} maupun \tfive{} didapatkan bermanfaat, namun memiliki kontribusi yang lebih kecil dari fitur perhitungan sederhana seperti kesamaan Jaccard. Selain itu, didapatkan bahwa pemanfaatan seluruh fitur sebagai masukan dari \reranker{} \lambdamart{} dapat meningkatkan seluruh metrik sistem sekitar $4,17\%$ secara signifikan dengan nilai metrik utama, \recall{}$@3$, tertinggi diperoleh DLH13 (Reranker) dengan nilai $0,6632$ dan peningkatan sebesar $5,64\%$. Namun, saat dilakukan percobaan menggunakan hanya ketiga fitur tersbut, didapatkan peningkatan sebesar $3,739\%$ yang tidak signifikan.\\
+\noindent Terdapat beberapa masalah yang muncul seiring dengan bertambahnya peraturan. Hal tersebut menyebabkan proses pengumpulan dan evaluasi peraturan memakan waktu yang relatif lebih lama. Oleh karena itu, diperlukan suatu sistem yang dapat mengotomatiskan kebutuhan tersebut, salah satunya adalah \ir{}. Penelitian ini bertujuan untuk meningkatkan efektivitas sistem \ir{} melalui pendekatan \reranker{} berbasis fitur dengan memanfaatkan beberapa jenis fitur, seperti atribut kuantitatif sederhana, skor \txt{} \matching{}, dan \textit{document embeddings}. Ditemukan bahwa skor kesamaan Jaccard, nilai relevansi \obm, dan nilai relevansi LemurTF\_IDF merupakan karakteristik yang dapat membantu peningkatan efektivitas \reranking{} secara konsisten dalam domain legal. Sementara itu, fitur yang memanfaatkan \textit{embeddings} dari \bert{} maupun \tfive{} didapatkan bermanfaat, namun memiliki kontribusi yang lebih kecil dari fitur perhitungan sederhana seperti kesamaan Jaccard. Selain itu, didapatkan bahwa pemanfaatan seluruh fitur sebagai masukan dari \reranker{} \lambdamart{} dapat meningkatkan seluruh metrik sistem sekitar $4,17\%$ secara signifikan dengan nilai metrik utama, \recall{}$@3$, tertinggi diperoleh DLH13 (Reranker) dengan nilai $0,6632$ dan peningkatan sebesar $5,64\%$. Namun, saat dilakukan percobaan menggunakan hanya ketiga fitur tersebut, didapatkan peningkatan sebesar $3,739\%$ yang tidak signifikan.\\
 
 \vspace*{0.2cm}
 
