--- a/src/01-body/bab2.tex
+++ b/src/01-body/bab2.tex
@@ -1,7 +1,7 @@
 %-----------------------------------------------------------------------------%
 \chapter{\babDua}
 \label{bab:2}
-Sebelum memulai pembahasan mendalam mengenai hasil penelitian ini, penting untuk terlebih dahulu meninjau literatur yang relevan. Bab ini akan menyajikan ulasan terhadap teori-teori agar dapat diperoleh landasan teoritis yang kokoh untuk memahami konteks sistem \ir{} dengan \reranker{} berbasis fitur. Sebagai awalan bab, \subbab{}~\ref{subbab:2:Sistem Information Retrieval} menjelaskan salah satu sistem \ir{} yang umum digunakan, yaitu sistem dengan arsitektur \cascaded{}. Kemudian, \subbab{}~\ref{subbab:2:Algoritma Text Matching} membahas mengenai algoritma yang dapat digunakan sebagai fitur dan juga tahap penyaringan atau \ranking{} pertama. Setelah itu, \subbab{}~\ref{subbab:2:Document Encoder} menyampaikan penggunaan \encoder{} dan kaitannya dengan \ir{} sebagai fitur. Terakhir, \subbab{}~\ref{subbab:2:Model Reranker} mendeskripsikan mengenai model \reranker{} yang akan digunakan sebagai tahap \ranking{} kedua.
+Sebelum memulai pembahasan mendalam mengenai hasil penelitian ini, penting untuk terlebih dahulu meninjau literatur yang relevan. Bab ini akan menyajikan ulasan terhadap teori-teori agar dapat diperoleh landasan teoretis yang kokoh untuk memahami konteks sistem \ir{} dengan \reranker{} berbasis fitur. Sebagai awalan bab, \subbab{}~\ref{subbab:2:Sistem Information Retrieval} menjelaskan salah satu sistem \ir{} yang umum digunakan, yaitu sistem dengan arsitektur \cascaded{}. Kemudian, \subbab{}~\ref{subbab:2:Algoritma Text Matching} membahas mengenai algoritma yang dapat digunakan sebagai fitur dan juga tahap penyaringan atau \ranking{} pertama. Setelah itu, \subbab{}~\ref{subbab:2:Document Encoder} menyampaikan penggunaan \encoder{} dan kaitannya dengan \ir{} sebagai fitur. Terakhir, \subbab{}~\ref{subbab:2:Model Reranker} mendeskripsikan mengenai model \reranker{} yang akan digunakan sebagai tahap \ranking{} kedua.
 %-----------------------------------------------------------------------------%
 
 
@@ -35,7 +35,7 @@ R(q,d)=\sum_{t\in{}q\cap{}d}w(t,d) \, .
 \]
 
 \vspace{2mm}
-\noindent\textbf{Term Frequency-Inverse Document Frequency (\tfidf{})}. Algoritma ini merupakan salah satu model pembobotan \(w(t,d)\) yang terdiri dari dua bagian. Pertama, bagian \textit{Term Frequency} (TF) sebagai perhitungan frekuensi kemunculan kata pada dokumen yang dinotasikan sebagai 
+\noindent\textbf{Term Frequency-Inverse Document Frequency (\tfidf{})}. Algoritma ini merupakan salah satu model pembobotan \(w(t,d)\) yang terdiri dari dua bagian. Pertama, bagian \textit{Term Frequency} (TF) sebagai perhitungan frekuensi kemunculan kata pada dokumen yang dinotasikan sebagai
 \[
 TF(t,d)=\frac{f(t,d)}{len(d)} \, ,
 \]
@@ -86,15 +86,15 @@ Model transformer tersebut terdiri dari lapisan \encoder{} dan \decoder{} yang d
     \captionsource{Arsitektur transformer}{\citep{vaswani2017attention}}
     \label{fig:ilustrasi transformer}
 \end{figure}
-Lapisan \encoder{} bekerja dengan mengubah masukan yang berupa teks menjadi vektor yang dapat merepresentasikan makna semantik dari teks tersebut. Kemudian, lapisan \decoder{} digunakan untuk menginterpretasi vektor hasil lapisan \encoder{} dan menghasilkan serangkaian teks sebagai keluaran. Namun, dalam penelitian ini, karena model transformer hanya diperlukan untuk melakukan ekstraksi hasil vektor representasi teks, maka hanya akan menggunakan lapisan \encoder{} dalam eksperimen.
+Lapisan \encoder{} bekerja dengan mengubah masukan yang berupa teks menjadi vektor yang dapat merepresentasikan makna semantik dari teks tersebut. Kemudian, lapisan \decoder{} digunakan untuk menginterpretasikan vektor hasil lapisan \encoder{} dan menghasilkan serangkaian teks sebagai keluaran. Namun, dalam penelitian ini, karena model transformer hanya diperlukan untuk melakukan ekstraksi hasil vektor representasi teks, maka hanya akan menggunakan lapisan \encoder{} dalam eksperimen.
 
-Pengembangan utama dari arsitektur transformer dibandingkan dengan model-model \nn{} lainnya adalah mekanisme \textit{self-attention} yang memungkinkan model untuk memperhitungkan pentingnya setiap \textit{token} relatif satu sama lain di dalam kalimat. Mekanisme ini memungkinkan model untuk menangkap dependensi atau hubungan tanpa dibatasi oleh jarak antar urutan masukan, suatu hal yang terbatas pada model seperti RNN (Recurrent Neural Network) maupun CNN (Convolutional Neural Network). Namun, karena mekanisme \textit{self-attention} yang tidak mengandalkan alur seperti RNN, maka model transformer perlu mendapatkan informasi tambahan terkait posisi dari \textit{token} dalam urutan. Oleh karena itu, \citeauthor{vaswani2017attention} mengusulkan \textit{positional encoding} agar transformer dapat memanfaatkan informasi dari alur \textit{token}. Selain itu, perlu diperhatikan bahwa untuk setiap \textit{sub-layer} dari \encoder{} dan \decoder{} diimplementasikan \textit{feed-forward network} dan \textit{layer} normalisasi untuk stabilitas dan efisiensi pelatihan.
+Pengembangan utama dari arsitektur transformer dibandingkan dengan model-model \nn{} lainnya adalah mekanisme \textit{self-attention} yang memungkinkan model untuk memperhitungkan pentingnya setiap \textit{token} relatif satu sama lain di dalam kalimat. Mekanisme ini memungkinkan model untuk menangkap dependensi atau hubungan tanpa dibatasi oleh jarak antar urutan masukan, suatu hal yang terbatas pada model seperti RNN (Recurrent Neural Network) maupun CNN (Convolutional Neural Network). Namun, karena mekanisme \textit{self-attention} yang tidak mengandalkan alur seperti RNN, maka model transformer perlu mendapatkan informasi tambahan terkait posisi dari \textit{token} dalam urutan. Oleh karena itu, \citet{vaswani2017attention} mengusulkan \textit{positional encoding} agar transformer dapat memanfaatkan informasi dari alur \textit{token}. Selain itu, perlu diperhatikan bahwa untuk setiap \textit{sub-layer} dari \encoder{} dan \decoder{} diimplementasikan \textit{feed-forward network} dan \textit{layer} normalisasi untuk stabilitas dan efisiensi pelatihan.
 
 \vspace{2mm}
 \noindent\textbf{\lbert{} (\bert{}).}
 \lbert{} (\bert{}) adalah arsitektur yang memanfaatkan bagian \encoder{} dari transformer yang dirancang oleh Google untuk memahami konteks atau makna semantik dari kata di dalam suatu kalimat dengan pendekatan pemrosesan secara \textit{bidirectional}~\citep{devlin2018bert}. Dengan pendekatan ini, \bert{} dapat menangkap hubungan dan konteks antara kata-kata dalam kalimat, baik sebelum atau sesudah kata tertentu. Hal tersebut memungkinkan \bert{} untuk mendapatkan pemahaman yang lebih baik tentang makna kata dalam konteks kalimat yang lebih luas.
 
-Model \bert{} memiliki arsitektur yang memanfaatkan 12 \encoder{} yang bernamakan \textit{hidden layer} seperti yang ditunjukkan pada \gambar{}~\ref{fig:ilustrasi bert}.
+Model \bert{} memiliki arsitektur yang memanfaatkan 12 \encoder{} yang bernama \textit{hidden layer} seperti yang ditunjukkan pada \gambar{}~\ref{fig:ilustrasi bert}.
 \begin{figure}[!ht]
     \centering
     \includegraphics[scale=0.75]{assets/pdfs/IlustrasiBERT.drawio.pdf}
@@ -129,7 +129,7 @@ Seperti yang telah dijelaskan pada \bab~\ref{subbab:2:Sistem Information Retriev
 
 \subsection{\ranknet{}}
 \label{subbab:2:RankNet}
-\ranknet{}~\citep{burges2010ranknet} adalah sebuah model pembelajaran mesin yang dapat  yang secara spesifik dirancang untuk \ltr{} yang digunakan umumnya untuk tugas pemeringkatan seperti \ir{}. Model tersebut dapat diimplementasikan menggunakan model \nn{} maupun model \textit{boosted tree} yang menerima suatu vektor $v \in{} \mathbb{R}^n$ dan mengembalikan nilai riil $f(v)$. Diberikan suatu kueri pada pelatihan, \ranknet{} akan terlebih dahulu menghitung skor untuk setiap dokumen dengan $s_{i}=f(v_{i})$, kemudian melakukan komputasi probabilitas $P_{ij}$ yang merupakan kemungkinan dokumen $i$ yang seharusnya ditempatkan pada posisi yang lebih tinggi dibandingkan $j$. Probabilitas tersebut dihitung menggunakan
+\ranknet{}~\citep{burges2010ranknet} adalah sebuah model pembelajaran mesin yang dapat  yang secara spesifik dirancang untuk \ltr{} yang digunakan umumnya untuk tugas pemeringkatan seperti \ir{}. Model tersebut dapat diimplementasi menggunakan model \nn{} maupun model \textit{boosted tree} yang menerima suatu vektor $v \in{} \mathbb{R}^n$ dan mengembalikan nilai riil $f(v)$. Diberikan suatu kueri pada pelatihan, \ranknet{} akan terlebih dahulu menghitung skor untuk setiap dokumen dengan $s_{i}=f(v_{i})$, kemudian melakukan komputasi probabilitas $P_{ij}$ yang merupakan kemungkinan dokumen $i$ yang seharusnya ditempatkan pada posisi yang lebih tinggi dibandingkan $j$. Probabilitas tersebut dihitung menggunakan
 \[
 P_{ij} = \frac{1}{1+e^{-(s_i-s_j)}} \, .
 \]
